test/yaml/testdata/input/standard-default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default
  namespace: namespace1
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: default-service
      port:
        number: 8080
  rules:
  - host: example.com
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: default-service
  namespace: namespace1
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: namespace1
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
