test/yaml/testdata/input/standard-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls
  namespace: namespace1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - secure.example.com
    secretName: tls-secret
  rules:
  - host: secure.example.com
    http:
      paths:
      - path: /secure
        pathType: Prefix
        backend:
          service:
            name: secure-service
            port:
              number: 443
---
apiVersion: v1
kind: Service
metadata:
  name: secure-service
  namespace: namespace1
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
